Update Trending Item and fix icon favorite song on mobile

--- a/src/features/Player/components/PlayerControls/styles.scss
+++ b/src/features/Player/components/PlayerControls/styles.scss
@@ -83,6 +83,11 @@
     display: flex;
     align-items: center;
 
+    .btn {
+      &--active {
+        color: #6f0fbdbb !important;
+      }
+    }
     span {
       color: $color-white;
     }
